# QtChess

./: .gitignore  CMakeLists.txt  ChessUI.pro  LICENSE  Makefile  README.md  resources.qrc
.githooks/: pre-commit
.github/workflows/: build-workflow.yml  cmake.yml  ctest.yml  format.yml
docs/diagrams/: Class Diagram.drawio
include/: bishop.h  board.h  boardqt.h  boardscene.h  boardsquare.h  cpuPlayer.h  emptyPiece.h  humanPlayer.h  king.h  knight.h  mainwindow.h  pawn.h  piece.h  pieceqt.cpp  pieceqt.h  position.h  queen.h  rook.h
include/chess/: board.h  cpuPlayer.h  humanPlayer.h
include/chess/pieces/: bishop.h  emptyPiece.h  king.h  knight.h
include/gui/: boardscene.h
libs/: CMakeLists.txt
src/: bishop.cpp  board.cpp  boardqt.cpp  boardscene.cpp  boardsquare.cpp  chess.cpp  cpuPlayer.cpp  emptyPiece.cpp  humanPlayer.cpp  king.cpp  knight.cpp  main.cpp  mainwindow.cpp  move.cpp  pawn.cpp  piece.cpp  pieceqt.cpp  position.cpp  queen.cpp  rook.cpp
src/chess/: CMakeLists.txt  bishop.cpp  board.cpp  chess.cpp  cpuPlayer.cpp  pawn.cpp  position.cpp  queen.cpp
src/chess/pieces/: CMakeLists.txt  bishop.cpp  emptyPiece.cpp  king.cpp  pawn.cpp  queen.cpp  rook.cpp
src/chess/pieces/tests/: CMakeLists.txt  test_bishop.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp
src/chess/tests/: CMakeLists.txt  test_board.cpp  test_chess.cpp  test_pieces.cpp
src/gui/: CMakeLists.txt  boardscene.cpp  mainwindow.cpp  pieceqt.cpp
